# trace2power

./: .ci.yml  .gitignore  Cargo.toml  README.md
examples/: README.md  cudd-chksum  sta.tcl  test.py
examples/counter/: .gitignore  config.mk  counter.md  counter.sh  counter.v  counter_tb.v
examples/glitch/: constraints.sdc  glitch.sh  glitch.v  glitch_tb  glitch_tb.v
examples/hierarchical/: .gitignore  constraints.sdc  hierarchical.sh  hierarchical.sv  hierarchical_tb.sv
examples/limit_scope_power/: .gitignore  hierarchical_tb.sv  limit_scope_power.sh
examples/peak_power/: counter.v  peak_power.sh  peak_power.v
examples/synth/: counter.json  counter.v  counter.vcd  synth.sh
examples/tail/: .gitignore  big_and.sv  tail.sh  tail.sv
examples/tristate/: .gitignore  config.mk  constraints.sdc  tristate.sh  tristate.v  tristate_tb.sv
src/: lib.rs  main.rs  netlist.rs  stats.rs  util.rs
src/exporters/: mod.rs  saif.rs  tcl.rs
src/parsers/: mod.rs  sdc.rs  spef.rs
tests/: Makefile  limit_scope_power.rs  synth.rs
tests/counter/: .gitignore  Makefile  counter.saif  counter.tcl
tests/glitch/: Makefile  compare_tcl.sh
tests/hierarchical/: .gitignore  Makefile  hierarchical.saif  hierarchical.tcl
tests/limit_scope_power/: .gitignore  hierarchical.sv  hierarchical.vcd  limit_scope_power.sh  limit_scope_power.tcl  out.saif  out.tcl
tests/peak_power/: Makefile
tests/synth/: .gitignore  Makefile  synth.saif  synth.tcl
tests/tail/: .gitignore  Makefile  tail.saif  tail.tcl
tests/tristate/: .gitignore  Makefile  tristate.saif  tristate.tcl
(+11 files in other folders)
