[package]
name = "trace2power"
version = "0.1.0"
edition = "2021"

[dependencies]
wellen = "^0.10.1"
rayon = "1.10.0"
itertools = "0.13.0"
clap = { version = "4.5.9", features = ["derive", "cargo"] }
indoc = "2.0.5"
chrono = "0.4.39"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
