[package]
name = "trace2power"
version = "0.4.3"
edition = "2021"
description = "Reads VCD and FST signal traces and extracts accumulated power activity data for use with power analysis tools."
license = "Apache-2.0"
repository = "https://github.com/antmicro/trace2power"
exclude = [".ci.yml", ".github"]

[lib]
name = "libtrace2power"
test = true

[dependencies]
wellen = "^0.12.2"
rayon = "1.10.0"
itertools = "0.13.0"
clap = { version = "4.5.9", features = ["derive", "cargo"] }
indoc = "2.0.5"
chrono = "0.4.39"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
tempfile = "3.24.0"
